# overload_QDataStream_example

./: .gitignore  README.md
src/: CMakeLists.txt  MainClass.cpp  MainClass.h  main.cpp
